After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711356 - Unit tests fail
Unit tests fail
Status: RESOLVED FIXED
Product: libpeas
Classification: Platform
Component: general
1.9.x
Other Linux
: Normal normal
: ---
Assigned To: libpeas-maint
libpeas-maint
Depends on:
Blocks:
 
 
Reported: 2013-11-03 19:48 UTC by Sjoerd Simons
Modified: 2013-11-13 09:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Remove support for gjs-based Javascript plugins (47.25 KB, patch)
2013-11-03 23:27 UTC, Garrett Regier
committed Details | Review

Description Sjoerd Simons 2013-11-03 19:48:56 UTC
/extension/gjs/properties-prerequisite:                              OK
  /extension/gjs/nonexistent:                                          **
Gjs:ERROR:gjs/context.c:1127:gjs_context_make_current: assertion failed: (context == NULL || current_context == NULL)
FAIL


This is using both peas 1.9.0 and current git. GJS version is 1.38.1. Debugging this slightly it seems to becaused by both the test fixture and the test itself calling peas_engine_load_plugin, creating two GJS contexts both of which want to be the current one.
Comment 1 Garrett Regier 2013-11-03 23:27:18 UTC
Created attachment 258886 [details] [review]
Remove support for gjs-based Javascript plugins

There have been changes to the gjs bindings and as the issue
has only recently been noticed it is assumed that support for
them is not highly desired.
Comment 2 Ignacio Casal Quinteiro (nacho) 2013-11-04 07:43:45 UTC
Review of attachment 258886 [details] [review]:

Go ahead.
Comment 3 Garrett Regier 2013-11-13 09:08:39 UTC
Review of attachment 258886 [details] [review]:

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.