Remove support for gjs-based Javascript plugins

There have been changes to the gjs bindings and as the issue
has only recently been noticed it is assumed that support for
them is not highly desired.

https://bugzilla.gnome.org/show_bug.cgi?id=711356