peas-demo/peas-demo.c
@@ -124,7 +124,6 @@ main (int    argc,
   peas_engine_add_search_path (engine, plugin_dir, plugin_dir);
   g_free (plugin_dir);
 
-  peas_engine_enable_loader (engine, "gjs");
   peas_engine_enable_loader (engine, "python3");
   peas_engine_enable_loader (engine, "seed");
 
